[package]
name = "npt"
description = "Nix Package Tool"
version = "0.1.0"
edition = "2021"
authors = ["Santiago Fraire Willemoës <santiwilly@gmail.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
